--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:
+disqus:
+  shortname: artego-space
 
 # Build settings
 markdown: kramdown
@@ -32,3 +34,4 @@ exclude:
   - Gemfile
   - Gemfile.lock
 permalink: /:title 
+environment: production
