--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Привет! Я изучаю язык программирования Ruby. Хочу стать программистом.
   Вещаю о своих успехах и неудачах на пути к своей цели.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://artego.space" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:
 disqus:
