--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,7 @@
 title: Artego Space
 email: 
 description: > # this means to ignore newlines until "baseurl:"
-  Привет! Я изучаю язык программирования Ruby. Хочу стать программистом.
-  Вещаю о своих успехах и неудачах на пути к своей цели.
+  Мой путь Ruby программиста
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://artego.space" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
